# wFunction

./: .gitignore  3qblognorm11.qasm  Qasm_simulation.py  README.ipynb  README.md  Submit_Job.py  log_norm.py  pyproject.toml  readmetomd.sh  reread.py
.ipynb_checkpoints/: zx-checkpoint.ipynb
test/: QuantumPerceptron.ipynb  exploration.ipynb  exploration.py  hubbard_test.py  productqub.py  test_Generate_circuit.py  test_mpo2qbitsgates.py  test_qubitize_lognorm.py  test_scalarqubitize.py
wFunction/: Chebyshev.py  Generate_circuit.py  Iterative_Oopt.py  MPO_compress.py  Prony.py  __init__.py  compress_algs.py  generate_MPO.py  generate_simple_MPO.py  interpolate.py  mpo2qbitsgates.py  mps2qbitsgates.py  pyproject.toml  scalarQubitization.py
