[build-system]
requires = ["flit_core >=3.2,<4","wheel"]
build-backend = "flit_core.buildapi"

[project]
name = "wFunction"
authors = [{name = "Alexandre Foley", email = "Alexandre.Foley@usherbrooke.ca"}]
dynamic = ["version", "description"]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "numpy",
    "quimb >= 1.3.0",
    "jax",
    "jaxlib",
    "qiskit",
    "qiskit_aer",
    "multimethod",
    "numba",
    "autoray",
    "multimethod",
]

[project.optional-dependencies]
test = [
    "matplotlib",
    "seaborn",
    "scipy",
]
doc = ["sphinx"]
[project.urls]
Home = "https://github.com/algolab-quantique/wFunction.git"
