[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wFunction"
authors = [{name = "Alexandre Foley", email = "Alexandre.Foley@usherbrooke.ca"}]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/espace-ibmq-sherbrooke/wFunction.git"
